Prevent source code to overflow on small screens

--- a/org/style.css
+++ b/org/style.css
@@ -36,6 +36,10 @@ p {
     text-align: justify;
 }
 
+pre {
+    overflow: hidden;
+}
+
 ul.navbar {
     width: 100%;
     list-style-type: none;
@@ -106,6 +110,8 @@ ul.contact li {
     -webkit-overflow-scrolling: touch;
     overflow-y: scroll;
 }
+
+
 #postamble {
     margin: auto;
     text-align: center;
